external-service/generic-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: generic-gateway
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
