external-service/access-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: sample-destinationrule
    namespace: default
spec:
    host: mocky
    trafficPolicy:
        connectionPool:
            tcp:
                maxConnections: 1
            http:
                http1MaxPendingRequests: 1
                maxRequestsPerConnection: 1
        outlierDetection:
            consecutiveErrors: 1
            interval: 10s
            baseEjectionTime: 3m
            maxEjectionPercent: 80
