external-service/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
    name: mocky
spec:
    hosts:
        - mocky.io
        - "*.mocky.io"
    location: MESH_EXTERNAL
    ports:
        - number: 80
          name: http
          protocol: HTTP
    resolution: NONE
