external-service/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: mocky
spec:
    hosts:
        - mocky.io
        - "*.mocky.io"
    gateways:
        - sample-gateway
    tls:
        - match:
              - sniHosts:
                    - mocky.io
                    - "*.mocky.io"
          route:
              - destination:
                    host: internal-egress-firewall.ns1.svc.cluster.local
